// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetches values 1`] = `"Maurine"`;

exports[`fetches values 2`] = `
bound Array [
  "Edison",
  "Hilbert",
  "Danielle",
  "Maryse",
]
`;

exports[`fetches values 3`] = `"Miller"`;

exports[`fetches values 4`] = `
Object {
  "Query": Object {
    "arrayOfObjects": Array [
      Object {
        "string": "Miller",
      },
      Object {
        "string": "Millie",
      },
      Object {
        "string": "Jennings",
      },
    ],
    "arrayOfString": Array [
      "Edison",
      "Hilbert",
      "Danielle",
      "Maryse",
    ],
    "string": "Maurine",
  },
}
`;

exports[`shares cache for arguments with/without variables 1`] = `"Mervin"`;

exports[`shares cache for arguments with/without variables 2`] = `"Mervin"`;

exports[`shares cache for arguments with/without variables 3`] = `
Object {
  "Query": Object {
    "arrayOfObjects({\\"string\\":\\"test\\"})": Array [
      Object {
        "string": "Mervin",
      },
      Object {
        "string": "Edison",
      },
      Object {
        "string": "Hilbert",
      },
      Object {
        "string": "Danielle",
      },
    ],
  },
}
`;
